# wspe

./: .gitignore  CMakeLists.txt  README.md
AES CNG/source/: AES.h  Base64.h  Util.h
AMSI/: amsi_module_patch.c  amsi_scanner.c  structs.h
AppLocker/List Policies/: interfaces.h  main.c
Cryptography/AES CNG/: README.md
Cryptography/AES CNG/source/: AES.cpp  AESCrypt.sln  AESCrypt.vcxproj  AESCrypt.vcxproj.filters  Main.cpp  Util.cpp  nthelpers.h
DIA/: CMakeLists.txt
DIA/inc/: callback.h  dirutil.h  interface.h
DIA/inc/msdia/idl/: dia2.idl
DIA/inc/msdia/include/: cvconst.h  dia2.h
DIA/inc/msdia/lib/: diaguids.lib
DIA/inc/msdia/lib/amd64/: diaguids.lib
DIA/src/: callback.c  dirutil.c  interface.c  main.c
Defender/ExclusionLists/: CMakeLists.txt  main.c
Defender/ExclusionLists/inc/: defender.h
Defender/ExclusionLists/src/: defender.c
Fusion/FindAssembly/: FindAssembly.csproj  FindAssembly.sln  Program.cs
Fusion/FindAssembly/Fusion/: GACUtil.cs  IAssemblyCache.cs  IAssemblyCacheItem.cs  IAssemblyEnum.cs  IAssemblyName.cs
Fusion/FindAssembly/Properties/: AssemblyInfo.cs
Fusion/FindAssembly/Win32/: Functions.cs  Macros.cs
Fusion/ListAssemblies/: gacutil.h  main.c
Handles/: README.md  change_handle_info.cpp  get_process_handle.cpp  get_process_handles.cpp
Kerberos/AskTGT/: CMakeLists.txt  kerberos.c  kerberos.h  main.c  socket.c  socket.h
Kerberos/GetTicket/: CMakeLists.txt
Kerberos/GetTicket/src/: main.c
Kerberos/List/: CMakeLists.txt
Kerberos/List/src/: main.c
Kerberos/Purge/: CMakeLists.txt
Kerberos/Purge/src/: main.c
Object Manager/List Handles/: main.c  ntstructs.h
Object Manager/List Objects/: main.c
Office/Outlook/: CMakeLists.txt
Office/Outlook/inc/: outlook.h
Office/Outlook/src/: main.c  outlook.c
PE/: parse_header.c
Portable Executable/: parse_header.c
Power Management/: README.md  deus_somnum_pic.c  deus_somnum_user32.cpp
Process/GetProcessEnvironmentBlock/: GetProcessEnvironmentBlock.sln
Process/GetProcessEnvironmentBlock/GetProcessEnvironmentBlock/: GetProcessEnvironmentBlock.csproj  Program.cs
RWX/: README.md
RWX/JITCompilation/: JITCompilation.sln
RWX/JITCompilation/JITCompilation/: Program.cs
RWX/MMF/: MMF.sln
RWX/MMF/MMF/: MMF.csproj  Program.cs
RWX/PInvoke/: PInvoke.sln
RWX/PInvoke/PInvoke/: Program.cs
Secure Enclave/VBS/: bsod.c
Task Scheduler/: README.md  enumerate_tasks.cpp
WinDBG/: exploit86.js
Windows Objects/: list_objects.c  main.c
Windows Objects/List Objects/: main.c  ntstatus.h
